# gridftp-hdfs

./: .gitignore  CMakeLists.txt  README.md  bootstrap  configure.ac
conf/: Makefile.am  gridftp-hdfs  gridftp-hdfs-environment  gridftp-hdfs.spec  gridftp-inetd.conf.in
rpm/: gridftp-hdfs.spec
scripts/: gridftp-hdfs-standalone.in
scripts/init/: gridftp-hdfs.in
scripts/xinetd/: gridftp-hdfs-inetd.in  gridftp-hdfs.in
src/: Makefile.am  gridftp_hdfs.c  gridftp_hdfs.h  gridftp_hdfs_cksm.c  gridftp_hdfs_error.h  gridftp_hdfs_recv.c  gridftp_hdfs_send.c  gridftp_hdfs_stat.c
